[gd_scene load_steps=7 format=3 uid="uid://bmx0dmtliwnsy"]

[ext_resource type="Script" uid="uid://yw0ojkydrrbp" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="FontFile" uid="uid://cs1hdaxjcskix" path="res://Fonts/Venus Rising Rg.otf" id="2_0xm2m"]
[ext_resource type="PackedScene" uid="uid://b6725c0c0xjlq" path="res://player.tscn" id="2_1bvp3"]
[ext_resource type="FontFile" uid="uid://2851umohs3w7" path="res://Fonts/OstrichSans-Medium.otf" id="3_h2yge"]
[ext_resource type="PackedScene" uid="uid://ddw51hjl6gekx" path="res://Levels/test_world.tscn" id="5_lquwl"]
[ext_resource type="PackedScene" uid="uid://cmun4jr8xxww1" path="res://Items/Market/apple.tscn" id="6_7mycd"]

[node name="Main" type="Node3D"]
script = ExtResource("1_ig7tw")
player_scene = ExtResource("2_1bvp3")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://b6725c0c0xjlq")
spawn_path = NodePath("../Players")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HostButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 24.0
offset_top = 120.0
offset_right = 287.0
offset_bottom = 189.0
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 50
text = "Host <"
flat = true
alignment = 0

[node name="JoinButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 24.0
offset_top = 192.0
offset_right = 252.0
offset_bottom = 261.0
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 50
text = "Join <"
flat = true
alignment = 0

[node name="JoinScreen" type="Control" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/JoinScreen"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.13275003, 0.20381415, 0.1591779, 1)

[node name="JoinButtonFinal" type="Button" parent="UI/JoinScreen"]
layout_mode = 0
offset_left = 384.0
offset_top = 384.0
offset_right = 768.0
offset_bottom = 453.0
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 50
disabled = true
text = "Join <"
flat = true

[node name="BackButton" type="Button" parent="UI/JoinScreen"]
layout_mode = 0
offset_left = 384.0
offset_top = 448.0
offset_right = 768.0
offset_bottom = 517.0
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 50
text = "Back<"
flat = true

[node name="id_prompt" type="LineEdit" parent="UI/JoinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 324.0
offset_top = 264.5
offset_right = 772.0
offset_bottom = 311.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_h2yge")
theme_override_font_sizes/font_size = 32
placeholder_text = "Invite code"
alignment = 1

[node name="Label" type="Label" parent="UI/JoinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 164.0
offset_top = 156.0
offset_right = 932.0
offset_bottom = 237.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 32
text = "Have a host send you their
 Lobby ID code!"
horizontal_alignment = 1

[node name="Joining" type="Control" parent="UI"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1112.0
offset_bottom = 608.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="UI/Joining"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.13275003, 0.20381415, 0.1591779, 1)

[node name="Label" type="Label" parent="UI/Joining"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -19.5
offset_right = 105.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_0xm2m")
theme_override_font_sizes/font_size = 32
text = "Joining..."
horizontal_alignment = 1

[node name="LobbyID" type="RichTextLabel" parent="."]
offset_right = 448.0
offset_bottom = 23.0
focus_mode = 2
text = "Lobby ID"
selection_enabled = true

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.7071068, -0.35355338, 0.61237246, 0, 0.8660254, 0.50000006, -0.7071068, -0.35355338, 0.61237246, 19, 10, 19)

[node name="Players" type="Node3D" parent="."]

[node name="TestWorld" parent="." instance=ExtResource("5_lquwl")]

[node name="Apple" parent="." instance=ExtResource("6_7mycd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -2)

[connection signal="pressed" from="UI/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="UI/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="UI/JoinScreen/JoinButtonFinal" to="." method="_on_join_button_final_pressed"]
[connection signal="pressed" from="UI/JoinScreen/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="text_changed" from="UI/JoinScreen/id_prompt" to="." method="_on_id_prompt_text_changed"]
